--- a/package.json
+++ b/package.json
@@ -3,15 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "SET NODE_OPTIONS='--inspect' && next dev",
     "build": "next build",
     "start": "next start",
     "test": "yarn run build && yarn run start"
   },
   "dependencies": {
     "next": "10.2.0",
+    "next-redux-wrapper": "^7.0.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-redux": "^7.2.4",
+    "redux": "^4.1.0",
+    "redux-logger": "^3.0.6",
     "swr": "^0.5.6"
   }
 }
